CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT (CS248_PROJECT)

IF (USE_GLEW GREATER 0)
    SET(GL_EXT_LIB GLEW)
    ADD_DEFINITIONS(-DUSE_GLEW)
ELSE (USE_GLEW GREATER 0)
    SET(GL_EXT_LIB gl3w)
    LINK_DIRECTORIES($ENV{GL3W}/lib)
ENDIF (USE_GLEW GREATER 0)

IF (BUILD_ENGINE GREATER 0)
    SET(BUILD_SUBDIR src)
ENDIF (BUILD_ENGINE GREATER 0)

IF (BUILD_TESTS GREATER 0)
    SET(BUILD_SUBDIR tests)
ENDIF (BUILD_TESTS GREATER 0)

MESSAGE ( "\nOpenGL Extension Library = ${GL_EXT_LIB}.")
MESSAGE ( "To change -DUSE_GLEW = 1 for GLEW and -DUSE_GLEW=0 for gl3w\n")

#CUDA
FIND_PACKAGE(CUDA)

LINK_DIRECTORIES(/usr/local/cuda/lib64)

SET(ENGINE_STATIC_LIB $ENV{CS248_PROJECT}/lib/libengine.a)

INCLUDE_DIRECTORIES($ENV{GL3W}/include
					$ENV{CS248_PROJECT}/src
					$ENV{ASSIMP_INCLUDE})

SUBDIRS ( ${BUILD_SUBDIR} )